--- a/style.css
+++ b/style.css
@@ -129,8 +129,8 @@ body {
   #workText {
     font-family: "Chicle", "cursive", "Open Sans", sans-serif;
     padding-top: 30px;
-    padding-bottom: 200px;
-    padding-left: 150px;
+    padding-bottom: 50px;
+    padding-left: 550px;
     font-size: 50px;
   }
   #arrowphoto {
@@ -229,13 +229,10 @@ body {
   }
   #gmailIcon {
     grid-area: gmailnIcon;
-    width: 80px;
+    width: 70px;
     margin-left: 10px;
     margin-right: 10px;
-  }
-  #resumeIcon {
-    grid-area: resumeIcon;
-    width: 80px;
+    padding-top: 15px;
   }
   .container {
     display: flex;
@@ -303,7 +300,7 @@ body {
   
   footer {
     text-align: center;
-    margin-top: 150px;
+    margin-top: 40px;
   }
   #lineFooter {
     padding-bottom: 30px;
