--- a/style.css
+++ b/style.css
@@ -180,6 +180,9 @@ body {
     font-family: "Chicle", "cursive", "Open Sans", sans-serif;
     font-size: 30px;
   }
+  #clickResume{
+    padding-left: 70px;
+  }
  
   .typewriter {
     color: black;
@@ -215,6 +218,7 @@ body {
     display: flex;
     justify-content: center;
     flex-direction: row;
+  justify-content: center;
   }
   .footerContactPage {
     margin-top: 200px;
@@ -316,7 +320,7 @@ body {
   
   footer {
     text-align: center;
-    margin-top: 40px;
+    margin-top: 140px;
   }
   #lineFooter {
     padding-bottom: 30px;
@@ -437,6 +441,10 @@ body {
       padding: 10px;
       padding-left: 10px;
       text-align: center, justify;
+    }
+
+    #clickResume{
+      padding-left: 40px;
     }
    
   }
